--- a/index.html
+++ b/index.html
@@ -76,12 +76,15 @@
     <section class="comments py-4">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-30">
+          <div class="col-lg-20">
             <div class="fb-comments" style="margin-top: 1px;">
               <div class="fb-comments-header">
 
                 <!-- Headline -->
             <h3 class="my-4"><img class="img-fluid" src="./assets/img/come.svg"></h3>
+
+            <!-- Headline -->
+            <h3 class="my-4"><img class="img-fluid" src="./assets/img/come2.svg"></h3>
                   
                         </td>
                       </tr>
